--- a/index.html
+++ b/index.html
@@ -14,6 +14,27 @@
     <!--script src="js/index.js"></script-->
   </head>
   <body>
-    <h1>JV Scrub</h1>
+    <nav class="navbar navbar-default navbar-fixed-top" id="nav">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" id="navbar-mobile-btns">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="#top"><img id="nav-logo" src="images/logo.png" class="nav-logo-trans"></a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right" hidden="true" id="nav-info">
+                    <li><a href="#product" class="nav-me">Product</a></li>
+                    <li><a href="#testimonials" class="nav-me">Testimonials</a></li>
+                    <li><a href="#about" class="nav-me">About</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div id="main">
+
+    </div>
   </body>
 </html>
